fixed overflow hidden

--- a/first_activity/css/activity.css
+++ b/first_activity/css/activity.css
@@ -1,9 +1,8 @@
 /*tab name ng class inside <div> tags */
 .tab {
+    overflow: hidden;
     border: 1px solid #f4eef2;
     background-color: #cf5c8a;
-    height: auto;
-    width: auto;
   }
   
   .tab button {
@@ -16,8 +15,6 @@
     color:#f4eef2;
     font-family: 'Courier New', Courier, monospace;
     font-size: 100%;
-    height: auto;
-    width: auto;
   }
   .tab p{
     margin-left: 3%;
@@ -29,8 +26,6 @@
     color:#f4eef2;
     font-family: 'Courier New', Courier, monospace;
     font-size: 100%;
-    height: auto;
-    width: auto;
   }
   
   /* Change background color of buttons on hover */
@@ -45,8 +40,6 @@
     background-image: url("download.jpg");
     background-color: #cccccc;
     background-size: cover;
-    height: auto;
-    width: auto;
    }
 img {
     border-radius: 50%;
@@ -55,8 +48,6 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: auto;
-    width: auto;
   }
   /* first paragraph <p> class name "NAME"*/
 .name{
@@ -65,8 +56,6 @@ img {
     margin-right: 60%;
     color:black;
     font-size: 25px;
-    height: auto;
-    width: auto;
 }
 /* second paragraph <p> class name "JOB"*/
 .job{
@@ -75,8 +64,6 @@ img {
     margin-right: 63%;
     color:black;
     font-size: 15px;
-    height: auto;
-    width: auto;
 }
 .hire{
     width: 500px;
@@ -84,17 +71,11 @@ img {
     margin-right: 58%;
     color:black;
     font-size: 15px;
-    height: auto;
-    width: auto;
 }
 .button1{
     color:black;
-    height: auto;
-    width: auto;
 }
 .button2{
     color:black;
-    height: auto;
-    width: auto;
 }
   
